aws/fiware/demo-wallet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-wallet
spec:
  type: ClusterIP
  ports: 
    - name: static
      port: 3000
      protocol: TCP
      targetPort: static
  selector:
    app.kubernetes.io/instance: demo-wallet
    app.kubernetes.io/name: demo-wallet
