aws/fiware/demo-wallet/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations: 
    cert-utils-operator.redhat-cop.io/certs-from-secret: demo-wallet
  name: demo-wallet
spec:
  host: demo-wallet.fiware.dev
  port:
    targetPort: 3000
  tls: 
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to: 
    kind: Service
    name: demo-wallet
